# kernel-wasm

./: Cargo.toml  README.md  build.rs  build.sh  x86_64-bootloader.json
src/: main.rs  vga_buffer.rs
src/example-app/: index.js  my_wasm_function.wasm
